# retrie

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  Retrie.hs  Setup.hs  cabal.project  configure.sh  retrie.cabal
.github/workflows/: test.yml
Retrie/: AlphaEnv.hs  CPP.hs  Context.hs  Debug.hs  Elaborate.hs  ExactPrint.hs  Expr.hs  Fixity.hs  FreeVars.hs  GHC.hs  GroundTerms.hs  Monad.hs  Options.hs  Pretty.hs  Quantifiers.hs  Query.hs  Replace.hs  Rewrites.hs  Run.hs  SYB.hs  Subst.hs  Substitution.hs  Types.hs  Universe.hs  Util.hs
Retrie/ExactPrint/: Annotated.hs  Compat.hs
Retrie/PatternMap/: Bag.hs  Class.hs  Instances.hs
Retrie/Rewrites/: Function.hs  Patterns.hs  Rules.hs  Types.hs
demo/: Main.hs
hse/: Fixity.hs
tests/: AllTests.hs  Annotated.hs  CPP.hs  Demo.hs  Dependent.hs  Exclude.hs  Golden.hs  GroundTerms.hs  Ignore.hs  Main.hs  ParseQualified.hs  Targets.hs  Util.hs
tests/inputs/: Adhoc.test  Adhoc2.custom  Backticks.test  Backticks2.test  CPP.test  CPPConflict.test  Capture.test  Combined.test  Commas.test  Comments.test  DependentStmt.custom  Foo.test  FooFold.test  Imports.test  Iterate.test  MatchGroup.test  Operator.test  Operator1.test  Parens.test  PartialF.test  PartialU.test  PatBind.test  PatternSyn1.test  PatternSyn2.test  Qualified.test  Query.custom  Readme.custom  Readme1.test  Readme2.test  Readme3.test  Readme4.test  Readme5.test  Records.test  Records2.test  Recursion.test  Shadowing.test  Types.test  Types2.test  Types3.test  Types4.test  (+1 more)
